/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    `java-library`
    application
}

group = "me.taubsie"
version = "1.0.0"
description = "dungeon-hub-application"

repositories {
    mavenCentral()
    maven {
        url = uri("https://repo.hypixel.net/repository/Hypixel/")
        name = "Hypixel Repository"
    }
    mavenLocal()
}

dependencies {
    implementation("org.projectlombok:lombok:1.18.28")
    implementation("org.javacord:javacord:3.8.0")
    implementation("me.taubsie:dungeon-hub-common:1.0.0")
    implementation("me.taubsie:discord-html-transcripts:1.0.0")
    implementation("com.squareup.okhttp3:okhttp:4.10.0")
    implementation("org.jsoup:jsoup:1.15.3")
    implementation("net.codebox:homoglyph:1.2.1")
    implementation("org.apache.logging.log4j:log4j-core:2.20.0")
    implementation("org.apache.logging.log4j:log4j-slf4j2-impl:2.20.0")
    implementation("net.hypixel:hypixel-api-core:4.3")
    implementation("me.nullicorn:Nedit:2.2.0")
    implementation("com.google.zxing:javase:3.5.2")

    annotationProcessor("org.projectlombok:lombok:1.18.28")
    annotationProcessor("org.apache.logging.log4j:log4j-core:2.20.0")
}

application {
    mainClass.set("me.taubsie.dungeonhub.application.connection.DiscordConnection")
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
}

tasks.withType<JavaCompile> {
    options.encoding = "UTF-8"
}

tasks.withType<Javadoc> {
    options.encoding = "UTF-8"
}
